--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2017.7.27.1
 chardet==3.0.4
 coreapi==2.3.1
 coreschema==0.0.4
+crcmod==1.7
 defusedxml==0.5.0
 Django==1.11.3
 django-cors-headers==2.1.0
@@ -24,11 +25,13 @@ MarkupSafe==1.0
 mysqlclient==1.3.10
 oauthlib==2.0.6
 olefile==0.44
+oss2==2.4.0
 Pillow==4.2.1
 pycryptodome==3.4.6
 PyJWT==1.5.3
 python3-openid==3.1.0
 pytz==2017.2
+qiniu==7.2.0
 raven==6.2.1
 redis==2.10.6
 requests==2.18.4
