--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-crispy-forms==1.6.1
 django-filter==1.0.4
 django-formtools==2.0
 django-guardian==1.4.9
+django-qiniu-storage==2.3.1
 django-redis==4.8.0
 django-reversion==2.0.9
 djangorestframework==3.6.3
