1, test drf-haystack;

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,25 @@ coreapi==2.3.1
 coreschema==0.0.4
 crcmod==1.7
 defusedxml==0.5.0
-Django==1.11.3
+Django==1.10.8
 django-cors-headers==2.1.0
 django-crispy-forms==1.6.1
 django-filter==1.0.4
 django-formtools==2.0
 django-guardian==1.4.9
+django-haystack==2.6.1
 django-qiniu-storage==2.3.1
 django-redis==4.8.0
 django-reversion==2.0.9
 djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
 drf-extensions==0.3.1
+drf-haystack==1.6.1
 future==0.16.0
 httplib2==0.10.3
 idna==2.6
 itypes==1.1.0
+jieba==0.39
 Jinja2==2.9.6
 Markdown==2.6.8
 MarkupSafe==1.0
@@ -30,6 +33,7 @@ oss2==2.4.0
 Pillow==4.2.1
 pycryptodome==3.4.6
 PyJWT==1.5.3
+python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2017.2
 qiniu==7.2.0
@@ -42,5 +46,6 @@ social-auth-app-django==1.2.0
 social-auth-core==1.4.0
 uritemplate==3.0.0
 urllib3==1.22
+Whoosh==2.7.4
 XlsxWriter==0.9.8
 xlwt==1.2.0
