--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-crispy-forms==1.6.1
 django-filter==1.0.4
 django-formtools==2.0
 django-guardian==1.4.9
+django-haystack==2.8.1
 django-import-export==1.0.0
 django-qiniu-storage==2.3.1
 django-redis==4.8.0
@@ -19,6 +20,7 @@ django-reversion==2.0.9
 djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
 drf-extensions==0.3.1
+drf-haystack==1.7.1rc2
 et-xmlfile==1.0.1
 future==0.16.0
 gunicorn==19.7.1
