--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ idna==2.6
 itypes==1.1.0
 jdcal==1.3
 Jinja2==2.9.6
-Markdown==2.6.8
+Markdown==2.6.11
 MarkupSafe==1.0
 mysqlclient==1.3.10
 oauthlib==2.0.6
@@ -39,7 +39,9 @@ olefile==0.44
 openpyxl==2.5.0
 Pillow==4.2.1
 pycryptodome==3.4.6
+Pygments==2.2.0
 PyJWT==1.5.3
+pymdown-extensions==4.11
 python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2017.2
